GREAT CHORES ARE WORKING
Will need full testing on fridge

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div id="main-widget" class="widget">
             <div id="calendar-shopping">
-                <div id="calendar-content" class="cycling-content active">WEEKLY VIEW<br>CALENDAR<br>GOOGLE API<br>SHOPPING NEEDS<br>ON CYCLE every 30 seconds</div>
+                <div id="calendar-content" class="cycling-content active">WEEKLY VIEW<br>CALENDAR<br>SHOPPING NEEDS<br>ON CYCLE every 30 seconds</div>
                 <div id="shopping-list" class="cycling-content"></div>
             </div>
         </div>
@@ -31,43 +31,43 @@
             <div class="widget-content" id="chore-list">
                 <div class="chore-container">
                     <button class="chore-button" data-chore="dishes" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/3939/3939913.png" alt="Dishes" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="dishes">
+                    <div class="config-icon" data-chore="dishes" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="trash" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/5016/5016735.png" alt="Trash" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="trash">
+                    <div class="config-icon" data-chore="trash" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="water-plants" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/4147/4147953.png" alt="Water Plants" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="water-plants">
+                    <div class="config-icon" data-chore="water-plants" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="cat-litter" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/1687/1687142.png" alt="Cat Litter Tray" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="cat-litter">
+                    <div class="config-icon" data-chore="cat-litter" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="vacuum" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/125/125668.png" alt="Vacuum" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="vacuum">
+                    <div class="config-icon" data-chore="vacuum" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="robot-vacuum" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/1199/1199855.png" alt="Robot Vacuum" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="robot-vacuum">
+                    <div class="config-icon" data-chore="robot-vacuum" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="cat-dog-meds" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/4005/4005403.png" alt="Cat and Dog Meds" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="cat-dog-meds">
+                    <div class="config-icon" data-chore="cat-dog-meds" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="laundry" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/1075/1075355.png" alt="Laundry" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="laundry">
+                    <div class="config-icon" data-chore="laundry" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
                     <button class="chore-button" data-chore="dog-walking" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/10/10869.png" alt="Dog Walking" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="dog-walking">
+                    <div class="config-icon" data-chore="dog-walking" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
                 <div class="chore-container">
-                    <button class="chore-button" data-chore="water-bottle" aria-pressed="false"><img src="water-bottle.png" alt="Put Water Bottle Outside" width="80" height="80"></button>
-                    <img src="https://cdn-icons-png.flaticon.com/512/84/84380.png" alt="Configure" class="config-icon" data-chore="water-bottle">
+                    <button class="chore-button" data-chore="water-bottle" aria-pressed="false"><img src="https://cdn-icons-png.flaticon.com/512/3022/3022692.png" alt="Put Water Bottle Outside" width="80" height="80"></button>
+                    <div class="config-icon" data-chore="water-bottle" style="width: 20px; height: 20px; background-color: yellow;"></div>
                 </div>
             </div>
             <button id="scroll-right" class="scroll-button">▶</button>
@@ -91,42 +91,71 @@
             </div>
         </div>
     </div>
-    <div id="popup" class="popup">
+    <div id="chore-popup" class="popup">
         <div class="popup-content">
             <h2>Configure Chore Timing</h2>
-            <p>Chore: <span id="popup-chore-name"></span></p>
+            <p>Chore: <span id="chore-name"></span></p>
             <div class="day-selection">
-                <label><input type="checkbox" name="day" value="mon"><span>Mon</span></label>
-                <label><input type="checkbox" name="day" value="tue"><span>Tue</span></label>
-                <label><input type="checkbox" name="day" value="wed"><span>Wed</span></label>
-                <label><input type="checkbox" name="day" value="thu"><span>Thu</span></label>
-                <label><input type="checkbox" name="day" value="fri"><span>Fri</span></label>
-                <label><input type="checkbox" name="day" value="sat"><span>Sat</span></label>
-                <label><input type="checkbox" name="day" value="sun"><span>Sun</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="mon"><span>Mon</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="tue"><span>Tue</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="wed"><span>Wed</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="thu"><span>Thu</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="fri"><span>Fri</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="sat"><span>Sat</span></label>
+                <label><input type="checkbox" class="day-checkbox" value="sun"><span>Sun</span></label>
             </div>
             <div class="time-selection">
                 <label for="chore-time">Time:</label>
                 <input type="time" id="chore-time">
             </div>
-            <button id="save-config">Save</button>
+            <button id="save-chore-schedule">Save</button>
             <button id="close-popup">Close</button>
         </div>
     </div>
     <div id="chore-controls">
         <button id="export-chores">Export Chore Data</button>
     </div>
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script src="eventSystem.js"></script>
-    <script src="dateTime.js"></script>
-    <script src="weather.js"></script>
-    <script src="calendar.js"></script>
-    <script src="iosAlbum.js"></script>
-    <script src="contentCycling.js"></script>
-    <script src="dragResize.js"></script>
-    <script src="choreToggle.js"></script>
-    <script src="config.js"></script>
-    <script src="chores.js"></script>
-    <script src="ui.js"></script>
-    <script src="main.js"></script>
+    <script>
+        function loadScript(src) {
+            return new Promise((resolve, reject) => {
+                const script = document.createElement('script');
+                script.src = src;
+                script.onload = resolve;
+                script.onerror = () => reject(new Error(`Failed to load script: ${src}`));
+                document.body.appendChild(script);
+            });
+        }
+
+        const scripts = [
+            'eventSystem.js',
+            'dateTime.js',
+            'weather.js',
+            'calendar.js',
+            'iosAlbum.js',
+            'contentCycling.js',
+            'dragResize.js',
+            'config.js',
+            'chores.js',
+            'choreToggle.js',
+            'ui.js',
+            'main.js'
+        ];
+
+        Promise.all(scripts.map(loadScript))
+            .then(() => console.log('All scripts loaded successfully'))
+            .catch(error => console.error('Error loading scripts:', error));
+
+        // Increase timeout to 15 seconds
+        setTimeout(() => {
+            if (!window.allScriptsLoaded) {
+                console.error('Script loading timed out after 15 seconds');
+            }
+        }, 15000);
+
+        // Add a catch-all error handler
+        window.addEventListener('error', function(event) {
+            console.error('Unhandled error:', event.error);
+        });
+    </script>
 </body>
 </html>
