All working minus arrows on calendar

--- a/index.html
+++ b/index.html
@@ -73,22 +73,26 @@
             <button id="scroll-right" class="scroll-button">▶</button>
         </div>
         <div id="right-widget" class="widget">
-            <div id="rss-news" class="cycling-content active">
-                <h2>RSS NEWS</h2>
-                <div id="news-content"></div>
+            <button id="right-widget-prev" class="scroll-button">◀</button>
+            <div class="widget-content">
+                <div id="rss-news" class="cycling-content active">
+                    <h2>RSS NEWS</h2>
+                    <div id="news-content"></div>
+                </div>
+                <div id="ios-album" class="cycling-content">
+                    <h2>iOS PUBLIC ALBUM</h2>
+                    <div id="album-content"></div>
+                </div>
+                <div id="word-of-day-en" class="cycling-content">
+                    <h2>WORD OF THE DAY 🇬🇧</h2>
+                    <div id="word-en-content"></div>
+                </div>
+                <div id="word-of-day-uk" class="cycling-content">
+                    <h2>WORD OF THE DAY 🇺🇦</h2>
+                    <div id="word-uk-content"></div>
+                </div>
             </div>
-            <div id="ios-album" class="cycling-content">
-                <h2>iOS PUBLIC ALBUM</h2>
-                <div id="album-content"></div>
-            </div>
-            <div id="word-of-day-en" class="cycling-content">
-                <h2>WORD OF THE DAY 🇬🇧</h2>
-                <div id="word-en-content"></div>
-            </div>
-            <div id="word-of-day-uk" class="cycling-content">
-                <h2>WORD OF THE DAY 🇺🇦</h2>
-                <div id="word-uk-content"></div>
-            </div>
+            <button id="right-widget-next" class="scroll-button">▶</button>
         </div>
     </div>
     <div id="chore-popup" class="popup">
