--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             <div id="temperature">30°C</div>
         </div>
         <div id="main-widget" class="widget">
+            <button id="main-widget-prev" class="scroll-button">◀</button>
             <div id="calendar-shopping">
                 <div id="calendar-content" class="cycling-content active">WEEKLY VIEW<br>CALENDAR<br>SHOPPING NEEDS<br>ON CYCLE every 30 seconds</div>
                 <div id="shopping-list" class="cycling-content"></div>
             </div>
+            <button id="main-widget-next" class="scroll-button">▶</button>
         </div>
         <div id="chores" class="widget">
             <button id="scroll-left" class="scroll-button">◀</button>
