added version marker top left
as above

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div id="background"></div>
     <div id="dashboard">
+        <div id="version-number">v0.1.0</div>
         <div id="datetime" class="widget">
             <div id="day">mon</div>
             <div id="time">3.30pm</div>
