--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="background"></div>
     <div id="dashboard">
-        <div id="version-number">v0.1.0</div>
+        <div id="version-number">v0.1.3</div>
         <div id="datetime" class="widget">
             <div id="day">mon</div>
             <div id="time">3.30pm</div>
@@ -25,7 +25,21 @@
             <button id="main-widget-prev" class="scroll-button">◀</button>
             <div id="calendar-shopping">
                 <div id="calendar-content" class="cycling-content active">WEEKLY VIEW<br>CALENDAR<br>SHOPPING NEEDS<br>ON CYCLE every 30 seconds</div>
-                <div id="shopping-list" class="cycling-content"></div>
+                <div id="shopping-list" class="cycling-content">
+                    <h2>Shopping List</h2>
+                    <ul>
+                        <li>Milk</li>
+                        <li>Bread</li>
+                        <li>Eggs</li>
+                        <li>Cheese</li>
+                        <li>Apples</li>
+                        <li>Chicken</li>
+                        <li>Pasta</li>
+                        <li>Tomato sauce</li>
+                        <li>Toilet paper</li>
+                        <li>Dish soap</li>
+                    </ul>
+                </div>
             </div>
             <button id="main-widget-next" class="scroll-button">▶</button>
         </div>
@@ -145,6 +159,7 @@
             'chores.js',
             'choreToggle.js',
             'ui.js',
+            'rss.js',
             'main.js'
         ];
 
